--- a/theme/src/css/main/content-elements/icon-text-link.css
+++ b/theme/src/css/main/content-elements/icon-text-link.css
@@ -76,7 +76,7 @@
 }
 
 .ce-icon-text-link__link .stretched-link:hover:after {
-  background-color: hsla(0deg 0 0% 3%);
+  background-color: hsl(0deg 0 0% / 3%);
 }
 
 /* -------------------------------------------------------- */
