--- a/theme/src/css/main/content-elements/simple-site-header.css
+++ b/theme/src/css/main/content-elements/simple-site-header.css
@@ -1,6 +1,6 @@
 .ce-simple-site-header {
   --t3-ce-header-nav-bg: var(--t3-body-color);
-  --t3-ce-header-nav-color-hs: 0, 0%;
+  --t3-ce-header-nav-color-hs: 0deg 0%;
   --t3-ce-header-nav-color-l: 100%;
   --t3-ce-header-nav-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l));
   --t3-ce-header-nav-padding-top: 0.5rem;
@@ -14,13 +14,13 @@
   --t3-ce-header-nav-link-padding-left: 1rem;
   --t3-ce-header-nav-link-padding-right: 1rem;
   --t3-ce-header-nav-link-text-transform: uppercase;
-  --t3-ce-header-nav-hover-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.7);
-  --t3-ce-header-nav-hover-bg: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.08);
-  --t3-ce-header-nav-active-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.7);
-  --t3-ce-header-nav-active-bg: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.05);
+  --t3-ce-header-nav-hover-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 70%);
+  --t3-ce-header-nav-hover-bg: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 8%);
+  --t3-ce-header-nav-active-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 70%);
+  --t3-ce-header-nav-active-bg: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 5%);
   --t3-ce-header-nav-font-size: 1rem;
-  --t3-ce-header-nav-toggler-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.55);
-  --t3-ce-header-nav-toggler-border-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.2);
+  --t3-ce-header-nav-toggler-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 55%);
+  --t3-ce-header-nav-toggler-border-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 20%);
   --t3-ce-header-nav-toggler-padding: 0.25rem 0.75rem;
   --t3-ce-header-nav-toggler-border: 1px;
   --t3-ce-header-nav-toggler-border-radius: 0.25rem;
@@ -35,15 +35,15 @@
   --t3-ce-header-nav-dropdown-min-width: 12rem;
   --t3-ce-header-nav-dropdown-padding-top: 0.5rem;
   --t3-ce-header-nav-dropdown-margin-top: 0;
-  --t3-ce-header-nav-dropdown-border-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.2);
+  --t3-ce-header-nav-dropdown-border-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 20%);
   --t3-ce-header-nav-dropdown-border-width: 1px;
   --t3-ce-header-nav-dropdown-border-radius: 0;
   --t3-ce-header-nav-dropdown-item-padding-left: var(--t3-ce-header-nav-link-padding-left);
   --t3-ce-header-nav-dropdown-item-padding-top: 0.25rem;
-  --t3-ce-header-nav-dropdown-item-hover-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.7);
-  --t3-ce-header-nav-dropdown-item-hover-bg: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.1);
-  --t3-ce-header-nav-dropdown-item-active-bg: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.05);
-  --t3-ce-header-nav-dropdown-item-active-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.7);
+  --t3-ce-header-nav-dropdown-item-hover-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 70%);
+  --t3-ce-header-nav-dropdown-item-hover-bg: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 10%);
+  --t3-ce-header-nav-dropdown-item-active-bg: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 5%);
+  --t3-ce-header-nav-dropdown-item-active-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 70%);
 }
 
 /* X-Small devices (portrait phones, less than 576px) */
