--- a/theme/src/css/main/content-elements/site-header.css
+++ b/theme/src/css/main/content-elements/site-header.css
@@ -1,6 +1,6 @@
 .ce-site-header {
   --t3-ce-header-nav-bg: var(--t3-body-color);
-  --t3-ce-header-nav-color-hs: 0, 0%;
+  --t3-ce-header-nav-color-hs: 0deg 0%;
   --t3-ce-header-nav-color-l: 100%;
   --t3-ce-header-nav-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l));
   --t3-ce-header-nav-padding-top: 0.5rem;
@@ -14,13 +14,13 @@
   --t3-ce-header-nav-link-padding-left: 1rem;
   --t3-ce-header-nav-link-padding-right: 1rem;
   --t3-ce-header-nav-link-text-transform: uppercase;
-  --t3-ce-header-nav-hover-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.7);
-  --t3-ce-header-nav-hover-bg: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.08);
-  --t3-ce-header-nav-active-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.7);
-  --t3-ce-header-nav-active-bg: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.05);
+  --t3-ce-header-nav-hover-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 70%);
+  --t3-ce-header-nav-hover-bg: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 8%);
+  --t3-ce-header-nav-active-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 70%);
+  --t3-ce-header-nav-active-bg: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 5%);
   --t3-ce-header-nav-font-size: 1rem;
-  --t3-ce-header-nav-toggler-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.55);
-  --t3-ce-header-nav-toggler-border-color: hsla(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) 0.2);
+  --t3-ce-header-nav-toggler-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 55%);
+  --t3-ce-header-nav-toggler-border-color: hsl(var(--t3-ce-header-nav-color-hs) var(--t3-ce-header-nav-color-l) / 20%);
   --t3-ce-header-nav-toggler-padding: 0.25rem 0.75rem;
   --t3-ce-header-nav-toggler-border: 1px;
   --t3-ce-header-nav-toggler-border-radius: 0.25rem;
@@ -35,19 +35,19 @@
   --t3-ce-header-nav-dropdown-min-width: 12rem;
   --t3-ce-header-nav-dropdown-padding-top: 0.5rem;
   --t3-ce-header-nav-dropdown-margin-top: 0;
-  --t3-ce-header-nav-dropdown-border-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.2);
+  --t3-ce-header-nav-dropdown-border-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 20%);
   --t3-ce-header-nav-dropdown-border-width: 1px;
   --t3-ce-header-nav-dropdown-border-radius: 0;
   --t3-ce-header-nav-dropdown-item-padding-left: var(--t3-ce-header-nav-link-padding-left);
   --t3-ce-header-nav-dropdown-item-padding-top: 0.25rem;
-  --t3-ce-header-nav-dropdown-item-hover-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.7);
-  --t3-ce-header-nav-dropdown-item-hover-bg: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.1);
-  --t3-ce-header-nav-dropdown-item-active-bg: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.05);
-  --t3-ce-header-nav-dropdown-item-active-color: hsla(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) 0.7);
+  --t3-ce-header-nav-dropdown-item-hover-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 70%);
+  --t3-ce-header-nav-dropdown-item-hover-bg: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 10%);
+  --t3-ce-header-nav-dropdown-item-active-bg: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 5%);
+  --t3-ce-header-nav-dropdown-item-active-color: hsl(var(--t3-ce-header-nav-dropdown-color-hs) var(--t3-ce-header-nav-dropdown-color-l) / 70%);
 
   /* search button */
   --t3-ce-header-search-bg: var(--t3-body-bg);
-  --t3-btn-search-bg-hs: 0, 0%;
+  --t3-btn-search-bg-hs: 0deg 0%;
   --t3-btn-search-bg-l: 100%;
   --t3-btn-search-bg: hsl(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l));
   --t3-btn-search-color: var(--t3-ce-header-nav-bg);
@@ -60,28 +60,28 @@
   --t3-btn-search-active-border-color: hsl(var(--t3-btn-search-bg-hs) calc(var(--t3-btn-search-bg-l) - 13%));
 
   /* search suggest */
-  --t3-search-suggest-hs: 0, 0%;
+  --t3-search-suggest-hs: 0deg 0%;
   --t3-search-suggest-l: 98%;
   --t3-search-suggest-bg: hsl(var(--t3-search-suggest-hs) var(--t3-search-suggest-l));
   --t3-search-suggest-selected-bg: hsl(var(--t3-search-suggest-hs) 88%);
   --t3-search-suggest-border: var(--t3-gray-80);
 
   /* top menu */
-  --t3-ce-header-top-color-hs: 0, 0%;
+  --t3-ce-header-top-color-hs: 0deg 0%;
   --t3-ce-header-top-color-l: 0%;
   --t3-ce-header-top-color: hsl(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l));
   --t3-ce-header-top-bg: var(--t3-body-bg);
-  --t3-ce-header-top-hover-color: hsla(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) 0.7);
-  --t3-ce-header-top-hover-bg: hsla(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) 0.08);
-  --t3-ce-header-top-active-color: hsla(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) 0.7);
-  --t3-ce-header-top-active-bg: hsla(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) 0.05);
+  --t3-ce-header-top-hover-color: hsl(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) / 70%);
+  --t3-ce-header-top-hover-bg: hsl(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) / 8%);
+  --t3-ce-header-top-active-color: hsl(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) / 70%);
+  --t3-ce-header-top-active-bg: hsl(var(--t3-ce-header-top-color-hs) var(--t3-ce-header-top-color-l) / 5%);
 
   /* lang menu */
-  --t3-ce-lang-menu-color-hs: 0, 0%;
+  --t3-ce-lang-menu-color-hs: 0deg 0%;
   --t3-ce-lang-menu-color-l: 0%;
   --t3-ce-lang-menu-color: hsl(var(--t3-ce-lang-menu-color-hs) var(--t3-ce-lang-menu-color-l));
   --t3-ce-lang-menu-bg: var(--t3-body-bg);
-  --t3-ce-lang-menu-hover-color: hsla(var(--t3-ce-lang-menu-color-hs) var(--t3-ce-lang-menu-color-l) 0.7);
+  --t3-ce-lang-menu-hover-color: hsl(var(--t3-ce-lang-menu-color-hs) var(--t3-ce-lang-menu-color-l) / 70%);
 }
 
 /* X-Small devices (portrait phones, less than 576px) */
@@ -575,7 +575,7 @@
   color: var(--t3-btn-search-hover-color);
   background-color: var(--t3-btn-search-hover-bg);
   border-color: var(--t3-btn-search-hover-border-color);
-  box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) 0.5);
+  box-shadow: 0 0 0 0.2rem hsl(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) / 50%);
 }
 
 .search-form__group-btn-submit:active,
@@ -587,7 +587,7 @@
 
 .search-form__group-btn-submit:active:focus,
 .search-form__group-btn-submit.active:focus {
-  box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) 0.5);
+  box-shadow: 0 0 0 0.2rem hsl(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) / 50%);
 }
 
 .search-form__group-input-wrp .awesomplete,
@@ -636,7 +636,7 @@
   color: var(--t3-btn-search-hover-color);
   background-color: var(--t3-btn-search-hover-bg);
   border-color: var(--t3-btn-search-hover-border-color);
-  box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) 0.5);
+  box-shadow: 0 0 0 0.2rem hsl(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) / 50%);
 }
 
 .header-top__search-btn:active,
@@ -648,7 +648,7 @@
 
 .header-top__search-btn:active:focus,
 .header-top__search-btn.active:focus {
-  box-shadow: 0 0 0 0.2rem hsla(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) 0.5);
+  box-shadow: 0 0 0 0.2rem hsl(var(--t3-btn-search-bg-hs) var(--t3-btn-search-bg-l) / 50%);
 }
 
 .header-top__search-box .awesomplete,
