--- a/Resources/Private/Partials/ContentElements/Media/Figure.html
+++ b/Resources/Private/Partials/ContentElements/Media/Figure.html
@@ -16,7 +16,7 @@
 
   <figure class="figure-partial figure figure-{type -> f:format.case(mode: 'lower')}">
 
-    <f:render partial="Media/Type/{type}" arguments="{data:data, file:file, height:height, width:width, mobile_width:mobile_width}" optional="1"/>
+    <f:render partial="Media/Type/{type}" arguments="{data:data, file:file, height:height, width:width, mobile_width:mobile_width, lazy_load:lazy_load}" optional="1"/>
 
     <f:if condition="{file.description} || {t3kit:isPlaceholderEnabled()}">
       <figcaption class="figure-partial__caption figure-caption text-{file.referenceProperties.description_position}">
