--- a/Resources/Private/Templates/ContentElements/Static/HeroImage.html
+++ b/Resources/Private/Templates/ContentElements/Static/HeroImage.html
@@ -9,7 +9,17 @@
 
 
   <f:if condition="{flexform.height} != 0">
-    <f:variable name="height">{flexform.height}</f:variable>
+    <f:then>
+      <f:variable name="height">{flexform.height}</f:variable>
+      <f:variable name="height_class">height-crop</f:variable>
+    </f:then>
+    <f:else>
+      <f:variable name="height_class">height-auto</f:variable>
+    </f:else>
+  </f:if>
+
+  <f:if condition="{flexform.skip_lazy_load} == 1">
+    <f:variable name="lazy_load">skip</f:variable>
   </f:if>
 
   <f:if condition="{data.section_container_width} == 'container'">
@@ -25,43 +35,47 @@
       {background}
       {f:if(condition: flexform.overlay, then: ' ce-hero-image--overlay-{flexform.overlay}')}">
 
-      <div class="ce-hero-image__caption-wrp
-        ce-hero-image__caption--{flexform.caption_alignment}
-        container"
-        {f:if(condition:height, then: 'style="height: {height}px;"')}>
-        <div class="ce-hero-image__caption">
+      <div class="ce-hero-image__caption-wrp ce-hero-image__caption-wrp--{height_class}">
+        <div class="ce-hero-image__caption-container
+          ce-hero-image__caption-container--{flexform.caption_alignment}
+          ce-hero-image__caption-container--{height_class}
+          container"
+          {f:if(condition:height, then: 'style="height: {height}px;"')}>
 
-          <f:if condition="{data.header_text} || {t3kit:isPlaceholderEnabled()}">
-            <div class="ce-hero-image__caption-header">
-              <f:render partial="Header/HeaderText" arguments="{_all}" />
-            </div>
-          </f:if>
+          <div class="ce-hero-image__caption">
 
-          <f:if condition="{data.subheader_text} || {t3kit:isPlaceholderEnabled()}">
-            <div class="ce-hero-image__caption-subheader">
-              <f:render partial="Header/SubHeaderText" arguments="{_all}" />
-            </div>
-          </f:if>
+            <f:if condition="{data.header_text} || {t3kit:isPlaceholderEnabled()}">
+              <div class="ce-hero-image__caption-header">
+                <f:render partial="Header/HeaderText" arguments="{_all}" />
+              </div>
+            </f:if>
 
-          <f:if condition="{data.bodytext} || {t3kit:isPlaceholderEnabled()}">
-            <div class="ce-hero-image__caption-bodytext fluid-font-size">
-              <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
-            </div>
-          </f:if>
+            <f:if condition="{data.subheader_text} || {t3kit:isPlaceholderEnabled()}">
+              <div class="ce-hero-image__caption-subheader">
+                <f:render partial="Header/SubHeaderText" arguments="{_all}" />
+              </div>
+            </f:if>
 
-          <f:if condition="{data.link} || {t3kit:isPlaceholderEnabled()}">
-            <div class="ce-hero-image__caption-link">
-              <f:if condition="{data.link_as_button}">
-                <f:then>
-                  <f:render partial="Link/ButtonLink" arguments="{_all}" />
-                </f:then>
-                <f:else>
-                  <f:render partial="Link/Link" arguments="{_all}" />
-                </f:else>
-              </f:if>
-            </div>
-          </f:if>
+            <f:if condition="{data.bodytext} || {t3kit:isPlaceholderEnabled()}">
+              <div class="ce-hero-image__caption-bodytext fluid-font-size">
+                <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
+              </div>
+            </f:if>
 
+            <f:if condition="{data.link} || {t3kit:isPlaceholderEnabled()}">
+              <div class="ce-hero-image__caption-link">
+                <f:if condition="{data.link_as_button}">
+                  <f:then>
+                    <f:render partial="Link/ButtonLink" arguments="{_all}" />
+                  </f:then>
+                  <f:else>
+                    <f:render partial="Link/Link" arguments="{_all}" />
+                  </f:else>
+                </f:if>
+              </div>
+            </f:if>
+
+          </div>
         </div>
       </div>
 
