[TASK] update list-style-position styling for RTE content element (BE and FE)

--- a/Resources/Public/CSS/RTE/contents.css
+++ b/Resources/Public/CSS/RTE/contents.css
@@ -4,3 +4,10 @@
 .text-end {
   text-align: right;
 }
+
+li.text-center,
+li.text-end,
+ol.text-center,
+ol.text-end {
+  list-style-position: inside;
+}
