[BUGFIX] Removed an extra "#"
The "aria-labelledby" attribute had an extra "#", so the target was not existing so not valid
Fixes #304

--- a/Resources/Private/Templates/ContentElements/Dynamic/Accordion.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Accordion.html
@@ -43,7 +43,7 @@
             />
           </div>
 
-          <div id="body-{data.uid}-{iteration.cycle}" class="accordion-collapse {show} collapse " aria-labelledby="#header-{data.uid}-{iteration.cycle}" {f:format.raw(value: '{always-open}')}>
+          <div id="body-{data.uid}-{iteration.cycle}" class="accordion-collapse {show} collapse " aria-labelledby="header-{data.uid}-{iteration.cycle}" {f:format.raw(value: '{always-open}')}>
 
             <div class="ce-accordion__body-wrp accordion-body flex-column d-flex">
               <f:if condition="{item.images}">
