--- a/theme/src/css/main/content-elements/table.css
+++ b/theme/src/css/main/content-elements/table.css
@@ -48,7 +48,7 @@
 }
 
 .table > :not(:last-child) > :last-child > * {
-  border-bottom-color: currentColor;
+  border-bottom-color: currentcolor;
 }
 
 .caption-top {
