--- a/Resources/Private/Extensions/indexed_search/Templates/Search/Search.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/Search/Search.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:is="http://typo3.org/ns/TYPO3/CMS/IndexedSearch/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:render partial="Css/Indexedsearch" arguments="{_all}" />
+<f:asset.css identifier="indexedsearch" href="EXT:t3kit/theme/src/css/indexedsearch.css" />
 
 <f:alias map="{sword: searchParams.sword}">
     <f:render partial="Form" arguments="{_all}" />
@@ -9,20 +9,6 @@
     <f:if condition="{result.categoryTitle}">
         <h1 class="tx-indexedsearch-category">{result.categoryTitle}</h1>
     </f:if>
-<!--     <f:if condition="{result.count} > 0">
-        <div class="tx-indexedsearch-info-sword">
-            <f:for each="{searchWords}" as="searchWord" key="key">
-                <f:if condition="{key} > 0">
-                    <f:then>
-                        <f:translate key="searchFor.{searchWord.operatorLabel}" />&nbsp;<span class="tx-indexedsearch-info-sword-word">{searchWord.sword}</span>
-                    </f:then>
-                    <f:else>
-                        <f:translate key="searchFor" />&nbsp;<span class="tx-indexedsearch-info-sword-word">{searchWord.sword}</span>
-                    </f:else>
-                </f:if>
-            </f:for>
-        </div>
-    </f:if> -->
     {result.searchedInSectionInfo}
     <f:if condition="{result.count} > 0">
         <f:then>
